# Marking_Program

./: .gitignore  Dockerfile  README.md  compile.sh  docker-compose.yml  run.sh  test.cpp
compile/: CMakeLists.txt  compile.sh  main.cpp
db/docker-entrypoint-initdb.d/: create_table.sql
marking/: CMakeLists.txt  main.cpp
marking/header/: Database.hpp  Input.hpp  LanguageEnum.hpp  Output.hpp  ProblemInput.hpp  ProblemLog.hpp  ProblemOutput.hpp
marking/output/: output_1.txt  output_2.txt
marking/test_file/: a.out  test.cpp
